--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=task2
 spring.datasource.url=jdbc:mysql://localhost:3306/task2?createDatabaseIfNotExist=true
 
 spring.datasource.username=root
-spring.datasource.password=Mathi55!!
+spring.datasource.password=
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
